--- a/docs/examples/1-Surfaces/1-Surfaces_simple.ipynb
+++ b/docs/examples/1-Surfaces/1-Surfaces_simple.ipynb
@@ -57,7 +57,7 @@
                 {
                     "data": {
                         "text/plain": [
-                            "<matplotlib.contour.QuadContourSet at 0x7f9418b618e0>"
+                            "<matplotlib.contour.QuadContourSet at 0x7fc2b09ba5b0>"
                         ]
                     },
                     "execution_count": 4,
@@ -112,21 +112,13 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [
                 {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "/Users/scuervo91/Documents/dev/volumetricspy/volumetricspy/stats/grid.py:921: UserWarning: VTK 9 no longer accepts an offset array\n",
-                        "  grid = pv.UnstructuredGrid(offset, cells, cell_type, points)\n"
-                    ]
-                },
-                {
                     "data": {
                         "application/vnd.jupyter.widget-view+json": {
-                            "model_id": "4e4c5a7dad8342bd91d2bb912fbf6c85",
+                            "model_id": "4bfea7bab262423ca2b45df3bbbf07af",
                             "version_major": 2,
                             "version_minor": 0
                         },
