--- a/docs/examples/1-Surfaces/1-Surfaces_simple.ipynb
+++ b/docs/examples/1-Surfaces/1-Surfaces_simple.ipynb
@@ -26,7 +26,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [
                 {
@@ -35,7 +35,7 @@
                             "(4, 3)"
                         ]
                     },
-                    "execution_count": 3,
+                    "execution_count": 9,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -43,7 +43,7 @@
             "source": [
                 "x = np.linspace(0, 300, 4)\n",
                 "y = np.linspace(0, 400, 3)\n",
-                "yy, xx = np.meshgrid(y,x)\n",
+                "xx,yy = np.meshgrid(x,y,indexing='ij')\n",
                 "z = np.zeros_like(xx) - 1000\n",
                 "z.shape\n",
                 "\n"
@@ -51,16 +51,39 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [
                 {
                     "data": {
                         "text/plain": [
-                            "<matplotlib.contour.QuadContourSet at 0x7fc2b09ba5b0>"
+                            "array([[  0., 200., 400.],\n",
+                            "       [  0., 200., 400.],\n",
+                            "       [  0., 200., 400.],\n",
+                            "       [  0., 200., 400.]])"
                         ]
                     },
-                    "execution_count": 4,
+                    "execution_count": 10,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "yy"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 3,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "<matplotlib.contour.QuadContourSet at 0x7fbe82cb7640>"
+                        ]
+                    },
+                    "execution_count": 3,
                     "metadata": {},
                     "output_type": "execute_result"
                 },
