--- a/docs/examples/3-Points/ind_krigging.ipynb
+++ b/docs/examples/3-Points/ind_krigging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "0  70.0  27.0  None  None"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "2  60.0  70.0  None  None  shale     0     0      1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,29 +239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CloudPoints(points=[Dot(x=70.0, y=27.0, z=None, crs=None, fields={'coal': -0.06528155609497596, 'coal_variance': 0.2053969276984402, 'sand': 0.8372564931646495, 'sand_variance': 0.2053969276984402, 'shale': 0.22802506293032654, 'shale_variance': 0.2053969276984402})])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "s1.ordinary_kriging(p, up, 'coal')\n",
-    "s1.ordinary_kriging(p, up, 'sand')\n",
-    "s1.ordinary_kriging(p, up, 'shale')"
+    "up1= s1.ordinary_kriging(p, up, 'coal')\n",
+    "up2=s1.ordinary_kriging(p, up1, 'sand')\n",
+    "up3=s1.ordinary_kriging(p, up2, 'shale')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -323,18 +312,18 @@
        "0  0.228025        0.205397  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "up.df()"
+    "up3.df()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -344,18 +333,18 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "up.df()[['coal','shale','sand']].sum(axis=1)"
+    "up3.df()[['coal','shale','sand']].sum(axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +353,7 @@
        "<AxesSubplot:xlabel='x', ylabel='y'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -383,12 +372,12 @@
    ],
    "source": [
     "p.plot(hue='facies')\n",
-    "up.plot(color='red')"
+    "up3.plot(color='red')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +519,7 @@
        "[289 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +699,7 @@
        "[289 rows x 7 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +901,7 @@
        "[289 rows x 9 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +921,7 @@
        "<AxesSubplot:xlabel='x', ylabel='y'>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -955,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +953,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -993,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1020,14 +1009,14 @@
     }
    ],
    "source": [
-    "wm = s2.ordinary_kriging(cp,grid,v='shale')\n",
+    "wm1 = s2.ordinary_kriging(cp,grid,v='shale')\n",
     "print('--')\n",
-    "wm = s2.ordinary_kriging(cp,grid,v='sand')"
+    "wm2 = s2.ordinary_kriging(cp,wm1,v='sand')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1121,20 +1110,20 @@
        "[2500 rows x 1 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred = wm.df()[['sand','shale']].idxmax(axis=1).to_frame()\n",
+    "pred = wm2.df()[['sand','shale']].idxmax(axis=1).to_frame()\n",
     "pred.columns=['pred']\n",
     "pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1337,19 +1326,19 @@
        "[2500 rows x 9 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wm.add_fields_from_df(pred, ['pred'])\n",
-    "wm.df()"
+    "wm2.add_fields_from_df(pred, ['pred'])\n",
+    "wm2.df()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1347,7 @@
        "<AxesSubplot:xlabel='x', ylabel='y'>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1376,12 +1365,12 @@
     }
    ],
    "source": [
-    "wm.plot(hue='pred')"
+    "wm2.plot(hue='pred')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1379,7 @@
        "<AxesSubplot:xlabel='x', ylabel='y'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
