--- a/docs/examples/3-Points/ind_krigging.ipynb
+++ b/docs/examples/3-Points/ind_krigging.ipynb
@@ -288,74 +288,33 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>z</th>\n",
-       "      <th>crs</th>\n",
-       "      <th>sand</th>\n",
-       "      <th>sand_variance</th>\n",
-       "      <th>coal</th>\n",
-       "      <th>coal_variance</th>\n",
-       "      <th>shale</th>\n",
-       "      <th>shale_variance</th>\n",
-       "      <th>facies</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>70.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0.837256</td>\n",
-       "      <td>0.205397</td>\n",
-       "      <td>-0.065282</td>\n",
-       "      <td>0.205397</td>\n",
-       "      <td>0.228025</td>\n",
-       "      <td>0.205397</td>\n",
-       "      <td>sand</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      x     y     z   crs      sand  sand_variance      coal  coal_variance  \\\n",
-       "0  70.0  27.0  None  None  0.837256       0.205397 -0.065282       0.205397   \n",
-       "\n",
-       "      shale  shale_variance facies  \n",
-       "0  0.228025        0.205397   sand  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1 entries, 0 to 0\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   x               1 non-null      float64\n",
+      " 1   y               1 non-null      float64\n",
+      " 2   z               0 non-null      object \n",
+      " 3   crs             0 non-null      object \n",
+      " 4   sand            1 non-null      float64\n",
+      " 5   sand_variance   1 non-null      float64\n",
+      " 6   coal            1 non-null      float64\n",
+      " 7   coal_variance   1 non-null      float64\n",
+      " 8   shale           1 non-null      float64\n",
+      " 9   shale_variance  1 non-null      float64\n",
+      " 10  facies          1 non-null      object \n",
+      "dtypes: float64(8), object(3)\n",
+      "memory usage: 216.0+ bytes\n"
+     ]
     }
    ],
    "source": [
     "rcp = ik.forward('facies')\n",
-    "rcp.df()"
+    "rcp.df().info()"
    ]
   },
   {
@@ -792,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -995,19 +954,19 @@
        "[2500 rows x 9 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rcp2 = ik2.forward('Facies')\n",
+    "rcp2 = ik2.forward('Facies', argmax=True)\n",
     "rcp2.df()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +975,7 @@
        "<AxesSubplot:xlabel='x', ylabel='y'>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1039,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1007,7 @@
        "<AxesSubplot:xlabel='x', ylabel='y'>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1071,25 +1030,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Spherical' object has no attribute 'ordinary_kriging'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/j7/nzf005ss2p30clvcx2r21ppm0000gn/T/ipykernel_7463/3122947736.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwm1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mordinary_kriging\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgrid\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'shale'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'--'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mwm2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mordinary_kriging\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mwm1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'sand'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Spherical' object has no attribute 'ordinary_kriging'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "wm1 = s2.ordinary_kriging(cp,grid,v='shale')\n",
-    "print('--')\n",
-    "wm2 = s2.ordinary_kriging(cp,wm1,v='sand')"
+    "dft = rcp2.df()\n",
+    "dft"
    ]
   },
   {
@@ -1098,9 +1044,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred = wm2.df()[['sand','shale']].idxmax(axis=1).to_frame()\n",
-    "pred.columns=['pred']\n",
-    "pred"
+    "from numpy.random import default_rng\n",
+    "\n",
+    "rng = default_rng(seed=None)\n",
+    "\n",
+    "rng.choice(dft['Facies'].unique(), size=10)\n"
    ]
   },
   {
@@ -1109,8 +1057,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wm2.add_fields_from_df(pred, ['pred'])\n",
-    "wm2.df()"
+    "for i, r in dft.head().iterrows():\n",
+    "    print(r[['sand','shale']])"
    ]
   },
   {
@@ -1119,7 +1067,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wm2.plot(hue='pred')"
+    "def softmax(x):\n",
+    "    e = np.exp(x)\n",
+    "    return e / e.sum()"
    ]
   },
   {
@@ -1128,7 +1078,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cp.plot(hue='Facies')"
+    "softmax([-0.2,0.2,0.6,0.4])"
    ]
   },
   {
