--- a/docs/examples/1-Surfaces/1-Surfaces_simple.ipynb
+++ b/docs/examples/1-Surfaces/1-Surfaces_simple.ipynb
@@ -159,11 +159,9 @@
         }
     ],
     "metadata": {
-        "interpreter": {
-            "hash": "58e73062c9e4d4f81f9ef1a34dcdc791e94cc9c601a992d43a5cdf3e9e023952"
-        },
         "kernelspec": {
-            "display_name": "Python 3.8.11 64-bit ('volumetricspy': conda)",
+            "display_name": "Python 3.8.12 ('volumetricspy')",
+            "language": "python",
             "name": "python3"
         },
         "language_info": {
@@ -178,7 +176,12 @@
             "pygments_lexer": "ipython3",
             "version": "3.8.12"
         },
-        "orig_nbformat": 4
+        "orig_nbformat": 4,
+        "vscode": {
+            "interpreter": {
+                "hash": "4fd186ed6b737b57cad5eac0f65cfc44cdfbe03b00597f7cf0d964c404ef24fb"
+            }
+        }
     },
     "nbformat": 4,
     "nbformat_minor": 2
