apply class method

--- a/docs/examples/3-Points/ind_krigging.ipynb
+++ b/docs/examples/3-Points/ind_krigging.ipynb
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -641,19 +641,19 @@
        "[289 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cp = CloudPoints().from_df(df, x='X',y='Y', fields=['Facies','Porosity','Perm'])\n",
+    "cp = CloudPoints.from_df(df, x='X',y='Y', fields=['Facies','Porosity','Perm'])\n",
     "cp.df()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
        "<AxesSubplot:xlabel='x', ylabel='y'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,12 +733,12 @@
     "xx, yy = np.meshgrid(xn, yn)\n",
     "\n",
     "dfun = pd.DataFrame({\"x\":xx.flatten(order='F'),\"y\":yy.flatten(order='F')})\n",
-    "grid = CloudPoints().from_df(dfun, x='x',y='y')"
+    "grid = CloudPoints.from_df(dfun, x='x',y='y')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
        "<AxesSubplot:xlabel='x', ylabel='y'>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1030,9 +1030,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>crs</th>\n",
+       "      <th>shale</th>\n",
+       "      <th>shale_variance</th>\n",
+       "      <th>sand</th>\n",
+       "      <th>sand_variance</th>\n",
+       "      <th>Facies</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.428006</td>\n",
+       "      <td>0.706652</td>\n",
+       "      <td>0.571994</td>\n",
+       "      <td>0.706652</td>\n",
+       "      <td>sand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20.408163</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.309545</td>\n",
+       "      <td>0.550432</td>\n",
+       "      <td>0.690455</td>\n",
+       "      <td>0.550432</td>\n",
+       "      <td>sand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.816327</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.197713</td>\n",
+       "      <td>0.422455</td>\n",
+       "      <td>0.802287</td>\n",
+       "      <td>0.422455</td>\n",
+       "      <td>sand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>61.224490</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.120137</td>\n",
+       "      <td>0.330105</td>\n",
+       "      <td>0.879863</td>\n",
+       "      <td>0.330105</td>\n",
+       "      <td>sand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>81.632653</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.070710</td>\n",
+       "      <td>0.279478</td>\n",
+       "      <td>0.929290</td>\n",
+       "      <td>0.279478</td>\n",
+       "      <td>sand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2495</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>918.367347</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.375504</td>\n",
+       "      <td>0.677546</td>\n",
+       "      <td>0.624496</td>\n",
+       "      <td>0.677546</td>\n",
+       "      <td>sand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2496</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>938.775510</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.229328</td>\n",
+       "      <td>0.473992</td>\n",
+       "      <td>0.770672</td>\n",
+       "      <td>0.473992</td>\n",
+       "      <td>sand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2497</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>959.183673</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.114166</td>\n",
+       "      <td>0.288207</td>\n",
+       "      <td>0.885834</td>\n",
+       "      <td>0.288207</td>\n",
+       "      <td>sand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2498</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>979.591837</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.083206</td>\n",
+       "      <td>0.186104</td>\n",
+       "      <td>0.916794</td>\n",
+       "      <td>0.186104</td>\n",
+       "      <td>sand</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2499</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.173995</td>\n",
+       "      <td>0.403432</td>\n",
+       "      <td>0.826005</td>\n",
+       "      <td>0.403432</td>\n",
+       "      <td>sand</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2500 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           x            y     z   crs     shale  shale_variance      sand  \\\n",
+       "0        0.0     0.000000  None  None  0.428006        0.706652  0.571994   \n",
+       "1        0.0    20.408163  None  None  0.309545        0.550432  0.690455   \n",
+       "2        0.0    40.816327  None  None  0.197713        0.422455  0.802287   \n",
+       "3        0.0    61.224490  None  None  0.120137        0.330105  0.879863   \n",
+       "4        0.0    81.632653  None  None  0.070710        0.279478  0.929290   \n",
+       "...      ...          ...   ...   ...       ...             ...       ...   \n",
+       "2495  1000.0   918.367347  None  None  0.375504        0.677546  0.624496   \n",
+       "2496  1000.0   938.775510  None  None  0.229328        0.473992  0.770672   \n",
+       "2497  1000.0   959.183673  None  None  0.114166        0.288207  0.885834   \n",
+       "2498  1000.0   979.591837  None  None  0.083206        0.186104  0.916794   \n",
+       "2499  1000.0  1000.000000  None  None  0.173995        0.403432  0.826005   \n",
+       "\n",
+       "      sand_variance Facies  \n",
+       "0          0.706652   sand  \n",
+       "1          0.550432   sand  \n",
+       "2          0.422455   sand  \n",
+       "3          0.330105   sand  \n",
+       "4          0.279478   sand  \n",
+       "...             ...    ...  \n",
+       "2495       0.677546   sand  \n",
+       "2496       0.473992   sand  \n",
+       "2497       0.288207   sand  \n",
+       "2498       0.186104   sand  \n",
+       "2499       0.403432   sand  \n",
+       "\n",
+       "[2500 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dft = rcp2.df()\n",
     "dft"
@@ -1040,9 +1245,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['shale', 'shale', 'shale', 'shale', 'sand', 'shale', 'sand',\n",
+       "       'sand', 'sand', 'sand'], dtype=object)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from numpy.random import default_rng\n",
     "\n",
@@ -1053,9 +1270,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sand     0.571994\n",
+      "shale    0.428006\n",
+      "Name: 0, dtype: object\n",
+      "sand     0.690455\n",
+      "shale    0.309545\n",
+      "Name: 1, dtype: object\n",
+      "sand     0.802287\n",
+      "shale    0.197713\n",
+      "Name: 2, dtype: object\n",
+      "sand     0.879863\n",
+      "shale    0.120137\n",
+      "Name: 3, dtype: object\n",
+      "sand     0.92929\n",
+      "shale    0.07071\n",
+      "Name: 4, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "for i, r in dft.head().iterrows():\n",
     "    print(r[['sand','shale']])"
@@ -1063,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,9 +1313,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.15291725, 0.22812574, 0.34032361, 0.2786334 ])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "softmax([-0.2,0.2,0.6,0.4])"
    ]
