--- a/docs/examples/3-Points/krigging.ipynb
+++ b/docs/examples/3-Points/krigging.ipynb
@@ -274,7 +274,7 @@
     "xu = [1,2,1,2,4,-1,8]\n",
     "yu = [1,1,2,2,4,-1,8]\n",
     "dfu = pd.DataFrame({\"x\":xu,\"y\":yu})\n",
-    "cpu = CloudPoints().from_df(dfu, x='x',y='y')\n",
+    "cpu = CloudPoints.from_df(dfu, x='x',y='y')\n",
     "cpu.df()"
    ]
   },
@@ -1590,7 +1590,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f9edbb5ddc0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fec03d0faf0>"
       ]
      },
      "execution_count": 18,
@@ -1622,7 +1622,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f9ee9979ac0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7febd15b0af0>"
       ]
      },
      "execution_count": 19,
